--- a/UI/index.html
+++ b/UI/index.html
@@ -6,15 +6,39 @@
 		 crossorigin="anonymous"></script>
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
 		 crossorigin="anonymous">
-		<script src="scripts/script.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+
+		<script src="script.js"></script>
+		<link rel="stylesheet" type="text/css" href="base.css">
 	</head>
 
-	<body ng-app="myApp" class="container">
+	<body ng-app="myApp" class="container-fluid">
+		<script>
+			// var socket = io.connect('http://' + document.domain + ':' + location.port);
+			// socket.on('bid placed', function (data) {
+			// 	feeds = data.message
+			// })
+		</script>
 		<div ng-controller="testController" data-ng-init="init()" class="container">
-
+			<div class="col-md-6 left">
+				<div class="column" ng-repeat="bid in bids">
+					<h3> {{ bid.itemName }} </h3>
+					<h4> {{ bid.basePrice }} </h4>
+					<h4> {{ bid.sellerName }} </h4>
+					<h4> {{ bid.sellerRating }} </h4>
+					<button ng-click="onBid();">Place Bid</button>
+					<br>
+				</div>
+			</div>
+			<div class="col-md-6 right">
+				<div class="column vertical" ng-repeat="entry in feeds">
+					<h3> {{ entry }} </h3>
+				</div>
+				<div class="column vertical" ng-repeat="relevantBid in relevantBids">
+					<h3>{{ relevantBid }}</h3>
+				</div>
+			</div>
 		</div>
-
-
 	</body>
 
 </html>
